# paperless-asn-index

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
src/: correspondents.rs  documents.rs  endpoints.rs  main.rs
src/paperless/: documents.rs  mod.rs
static/: submit_form.js
