[package]
name = "paperless-asn-index"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
env_logger = "0.11.2"
maud = { version = "0.26.0", features = ["actix-web"] }
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
